Finished chickencurry.html following iteration 3

--- a/recipes/chickencurry.html
+++ b/recipes/chickencurry.html
@@ -5,5 +5,40 @@
     </head>
     <body>
         <h1>Chicken Curry</h1>
+        <img src = "https://api.lifegetsbetter.ph/uploads/recipes/featured/qne-green-chicken-curry-featured-img.jpg" alt = "Chicken Curry">
+        <h2>Description:</h2>
+        <p>Filipino Chicken Curry is rooted in Indian cuisine, which was introduced to the Philippines during ancient trade routes. Spices such as turmeric, cumin, coriander, and cardamom entered the
+            local culinary scene. These aromatic ingredients formed the foundation for what woule eventually become one of Filipinos' favorite comfort foods. As with any traditional dish, Filipino cooks
+            have always put their unique spin on recipes passed down through generations. To adapt curry to local palates, Filipinos added coconut milk for creaminess and sweetness while reducing the spice
+            levels slightly compared to its Indian counterparts.</p>
+        <p>Every home cook has Pinoy-style chicken curry in their reportoire. The dish bears the DNA of Ginataang manok but what transforms it from ginataang manok to chicken curry is, curry powder.
+            It is a dish that is earthy, spicy, warming, or even sometimes sweet. It is a well-balanced, richly spiced dish with notes of deep savory flavors from some of the ingredients like fish 
+            sauce, coconut milk, and evaporated milk. Preparation time can take up to 10 minutes while the cooking time can take up to 20 - 30 minutes. </p>
+        <h3>Ingredients:</h3>
+        <ul>
+            <li>Curry Powder</li>
+            <li>Coconut Milk</li>
+            <li>Potato</li>
+            <li>Chicken</li>
+            <li>Carrots</li>
+            <li>Lemongrass</li>
+            <li>Bell Pepper</li>
+            <li>Fish Sauce</li>
+            <li>Onion</li>
+            <li>Ginger</li>
+            <li>Garlic</li>
+        </ul>
+        <h3>Steps:</h3>
+        <ol>
+            <li>Firstly, we will add vegetable oil followed by ginger and garlic in the cooking pot.</li>
+            <li>Next, we will add the chopped red onion which needs to be stirred till it turns translucent before adding the chicken leg.</li>
+            <li>After that, we will add 1 tablespoon of curry powder which needs a quick stir.</li>
+            <li>We will pour the water and let it boil for less than 5 minutes before pouring the coconut milk. Let it simmer for 30 minutes so the chicken can be cooked.</li>
+            <li>Once the simmering reach in 10 minutes, add the salt, black pepper, and the remaining curry powder to the coconut milk-water stew.</li>
+            <li>While waiting for the chicken to be cooked, We will pan-fry the potatoes and carrots in a separate pan. You can just half-cooked it since the rest will be done when you transfer it to the cooking pot.</li>
+            <li>Once you already simmered for almost 25 minutes, add the bell pepper and half-cooked carrot to the cooking pot first. Let it cook for 5 minutes before adding the half-cooked potatoes. </li>
+            <li>Stir gently and let it cook further till the chicken and vegetables are fully cooked. </li>
+            <li>Add fish sauce since this is what gives the flavor of the curry stew. Serve it with rice and you are done.</li>
+        </ol>
     </body>
 </html>
