--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <a href ="./recipes/chickencurry.html">Chicken Curry</a>
+        <a href ="./recipes/sinigang.html">Sinigang</a>
+        <a href ="./recipes/spicykoreanchicken.html">Spicy Korean Curry</a>
     </body>
 </html>
