Updated index.html with relevant information

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href ="./recipes/chickencurry.html">Chicken Curry</a>
-        <a href ="./recipes/sinigang.html">Sinigang</a>
-        <a href ="./recipes/spicykoreanchicken.html">Spicy Korean Curry</a>
+        <img src="https://www.theodinproject.com/mstile-310x310.png" alt="The Odin Project Logo" height = "465" width = "775">
+        <p>This site contains the first project on HTML foundations. By using basic HTML commands, I was able to create a simple landing page with the purpose of displaying information about different recipes.  </p>
+        <ul>
+        <li><a href ="./recipes/chickencurry.html" target = "_blank" rel = "noopener noreferrer">Chicken Curry</a></li>
+        <li><a href ="./recipes/sinigang.html" target = "_blank" rel = "noopener noreferrer">Sinigang</a></li>
+        <li><a href ="./recipes/spicykoreanchicken.html" target = "_blank" rel = "noopener noreferrer">Spicy Korean Chicken</a></li>
+    </ul>
     </body>
 </html>
