Improved the website by adding colors and fixed positioning of pictures and headings.

--- a/recipes/chickencurry.html
+++ b/recipes/chickencurry.html
@@ -3,11 +3,14 @@
     <head>
         <meta charset ="UTF-8">
         <title>Chicken Curry</title>
+        <link rel="stylesheet" href="stylescc.css"/>
     </head>
     <body>
+        <div>
         <h1>Chicken Curry</h1>
         <img src = "https://api.lifegetsbetter.ph/uploads/recipes/featured/qne-green-chicken-curry-featured-img.jpg" alt = "Chicken Curry">
         <h2>Description:</h2>
+    </div>
         <p>Filipino Chicken Curry is rooted in Indian cuisine, which was introduced to the Philippines during ancient trade routes. Spices such as turmeric, cumin, coriander, and cardamom entered the
             local culinary scene. These aromatic ingredients formed the foundation for what woule eventually become one of Filipinos' favorite comfort foods. As with any traditional dish, Filipino cooks
             have always put their unique spin on recipes passed down through generations. To adapt curry to local palates, Filipinos added coconut milk for creaminess and sweetness while reducing the spice
