Added colors and edited position of headings

--- a/recipes/spicykoreanchicken.html
+++ b/recipes/spicykoreanchicken.html
@@ -3,11 +3,14 @@
     <head>
         <meta charset = "UTF-8">
         <title>Spicy Korean Chicken</title>
+        <link rel="stylesheet" href="stylesspc.css"/>
     </head>
     <body>
+        <div>
         <h1>Spicy Korean Chicken</h1>
         <img src = "https://www.thespruceeats.com/thmb/YZp0VypUNJGJaAQrs7ZQildESqU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/korean-chicken-wings-4777759-10-e57cef8ba89b4beda8553da48a7e6f75.jpg" alt = "Korean Spicy Chicken" height = "465" width = "775">
         <h2>Description:</h2>
+    </div>
         <p> Over the past few years, Korean culture has been making waves worldwide and will continue to rise in the next few years. Aside from the popularity of K-pop, K-dramas, and movies, many people are starting to love and crave Korean food as well, particularly Korean fried chicken.
             Korean fried chicken is crunchy, crispy, and covered in various sauces of your choosing. Some flavors are spicy like this recipe while others are covered in delicious umami sesame and soy sauce flavors, and some kind of sweet sauce. The concept of fried chicken was first introduced 
             to Korea when the American Millitary set foot and stationed on Korean soil during the Korean War in the late 1940s. The US troops that were stationed in Korea during thanksgiving only had chicken instead of turkey to celebrate. </p>
